--- a/static/styles.css
+++ b/static/styles.css
@@ -1,15 +1,15 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-center{
-    padding: 40px;
+center {
+  padding-top: 100px;
 }
 .box {
   width: 500px;
   padding: 40px;
-  margin: 40px;
-  padding-top: 90px;
+  margin: 30px;
+  padding-top: 30px;
   padding-right: 40px;
   margin-left: 70px;
   margin-top: 40px;
@@ -17,11 +17,12 @@ center{
   background-color: rgb(48, 46, 46);
   border-radius: 150px;
   color: rgb(255, 255, 255);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: large;
+  font-size: x-large;
 }
 
-
+p {
+  color: white;
+}
 input {
   border-radius: 15px;
   color: rgb(0, 0, 0);
@@ -37,135 +38,120 @@ input {
   padding: 8px;
   width: 200px;
   font-weight: bold;
+  background-color: #ed3c57;
+  opacity: 1;
 }
 
 /*---Google font---*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 /*---Bases---*/
-*
-{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body
-{
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
-ul
-{
-  list-style:none;
+ul {
+  list-style: none;
 }
-a
-{
-  text-decoration:none;
+a {
+  text-decoration: none;
 }
 /*---Header---*/
-.header
-{
-  height:100vh;
-  width:100vw;
-  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('https://images.unsplash.com/photo-1477346611705-65d1883cee1e?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2Njg2MjIwNTY&ixlib=rb-4.0.3&q=80');
-  background-size:cover; 
+.header {
+  height: 100vh;
+  width: 100vw;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://images.unsplash.com/photo-1495592822108-9e6261896da8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+  background-size: cover;
   margin: 0;
 }
 /*---Navbar---*/
-.navbar
-{
-  position:absolute;
-  width:100%;
-  padding:50px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+.navbar {
+  position: absolute;
+  width: 100%;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.navbar .logo
-{
-  font-size:2em;
-  font-weight:bold;
+.navbar .logo {
+  font-size: 2em;
+  font-weight: bold;
 }
-.navbar .nav-links ul
-{
-  display:flex;
+.navbar .nav-links ul {
+  display: flex;
 }
-.navbar .nav-links ul li
-{
-  margin:0 25px;
+.navbar .nav-links ul li {
+  margin: 0 25px;
 }
-.navbar .nav-links ul li.active a
-{
-  color:#ed3c57;
-  font-weight:600;
+.navbar .nav-links ul li.active a {
+  color: #ed3c57;
+  font-weight: 600;
 }
-.navbar a 
-{
-  color:white;
+.navbar a {
+  color: white;
 }
-.navbar .menu-hamburger
-{
-  display:none;
-  color:white;
-  position:absolute;
-  top:50px;
-  right:50px;
-  font-size:35px;
-  cursor:pointer;
+.navbar .menu-hamburger {
+  display: none;
+  color: white;
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  font-size: 35px;
+  cursor: pointer;
 }
 
-#hero{
+#hero {
+  position: absolute;
+  top: 140px;
+}
+
+@media screen and (max-width: 900px) {
+  .navbar {
+    padding: 0;
+  }
+  .navbar .logo {
+    display: none;
+  }
+  .navbar .menu-hamburger {
+    display: block;
+  }
+  .nav-links {
+    top: 0;
+    left: -100%;
     position: absolute;
-    top: 140px;
-}
-
-@media screen and (max-width:900px)
-{
-  .navbar
-  {
-    padding:0;
-  }
-  .navbar .logo
-  {
-    display:none;
-  }
-  .navbar .menu-hamburger
-  {
-    display:block;
-  }
-  .nav-links
-  {
-    top:0;
-    left:-100%;
-    position:absolute;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background-color:rgba(0,0,0,0.5);
-    backdrop-filter:blur(8px);
-    width:100%;
-    height:100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(8px);
+    width: 100%;
+    height: 100vh;
     transition: left 0.5s ease;
-    
   }
-  .nav-links.mobile-menu
-  {
-  left:0;
-    
+  .nav-links.mobile-menu {
+    left: 0;
   }
 
-  .nav-links ul
-  {
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+  .nav-links ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  .navbar .nav-links ul li
-  {
-  margin:25px 0;
-  font-size:1.2em;
+  .navbar .nav-links ul li {
+    margin: 25px 0;
+    font-size: 1.2em;
   }
-  .menu-hamburger
-  {
-    display:block;
+  .menu-hamburger {
+    display: block;
   }
 }
-
+.result {
+  font-size: xx-large;
+  color: white;
+  text-align: center;
+  padding-top: 100px;
+}
