--- a/templates/output.html
+++ b/templates/output.html
@@ -1,32 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stroke Prediction</title>
-
-    <style>
-      body {
-        background-image: url(../1920x1080-clean-medical-background_53876-116875.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        color: aliceblue;
-        font-size: large;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        margin-top: 40px;
-        margin-left: 50px;
-      }
-
-      h1{
-        padding-top: 15%;
-        color: black;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename= 'styles.css') }}"
+    />
+    <title>Stroke Prediction System</title>
   </head>
 
   <body>
-    <h1>{{ prediction }}</h1>
+    <nav class="navbar">
+      <a href="#" class="logo">Stroke Prediction System</a>
+      <div class="nav-links">
+        <ul class="nav-menu">
+          <li class="active"><a href="/">Home</a></li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.1mg.com/online-doctor-consultation/chat"
+              >Find a Doctor</a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.google.com/search?q=find+hospitals+near+me"
+              >Find a Hospital</a
+            >
+          </li>
+          <li>
+            <a target="_blank" href="mailto:noxfreak4@gmail.com">Contact</a>
+          </li>
+          <!-- <li><a href = "https://www.google.com/search?keywords=My+Search+Parameters">asdasda</a></li> -->
+        </ul>
+      </div>
+      <i class="bx bx-grid-alt menu-hamburger"></i>
+    </nav>
+    <header class="header">
+      <div class="result">
+        <h1>Result</h1>
+        <h1>{{prediction}}</h1>
+      </div>
+    </header>
   </body>
 </html>
