--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{url_for('static', filename= 'styles.css') }}">
+    <link rel="stylesheet" href="/static/styles.css">
     <title>Stroke Prediction System</title>
 
   </head>
 
   <body>
     <nav class="navbar">
-      <a href="#" class="logo">Stroke Prediction System</a>
+      <a href="#" class="logo" id="bb"><h2><font size="6" face="arial" color="black">Stroke Prediction System</font></h2></a>
       <div class="nav-links">
         <ul class="nav-menu">
           <li class="active"><a href="">Home</a></li>
@@ -28,31 +28,26 @@
         <!-- <h1 id = "hero">STROKE PREDICTION</h1> -->
         <div class="box">
       
-          <form action="output" method="POST">
-            <label for="gender" style="padding-right: 100px">Gender : </label>
-            <select name="gender" id="gender">
+          <form action="output" method="POST" id="form">
+            <label for="gender" style="padding-right: 100px">Select Your Gender :</label>
+            <select name="gender" id="gender" required class="select-box">
+              <option value="male"></option>
               <option value="male">Male</option>
               <option value="female">Female</option>
               <option value="others">others</option>
             </select>
   
             <p>
-              Enter Age :
-              <input
-                type="number"
-                id="age"
-                name="age"
-                min="1"
-                max="100"
-                style="width: 100px"
-                placeholder=" e.g 1-100"
-              />
+              Enter Your Age :
+              <input type="number" name="age" min="1" max="100"  style="width: 200px" placeholder="Enter Age" required id="age">
+
             </p>
   
             <label for="hypertension" style="padding-right: 100px"
               >Hypertension :
             </label>
-            <select name="hypertension" id="hypertension">
+            <select name="hypertension" id="hypertension" required class="select-box">
+              <option value="male"></option>
               <option value="yes">Yes</option>
               <option value="no">No</option>
             </select>
@@ -62,7 +57,8 @@
             <label for="heart-disease" style="padding-right: 100px"
               >Any Heart Diseases :
             </label>
-            <select name="heart-disease" id="heart-disease">
+            <select name="heart-disease" id="heart-disease" required class="select-box">
+              <option value="male"></option>
               <option value="yes">Yes</option>
               <option value="no">No</option>
             </select>
@@ -72,7 +68,8 @@
             <label for="marriage" style="padding-right: 100px"
               >Are You Married :
             </label>
-            <select name="marriage" id="marriage">
+            <select name="marriage" id="marriage" required class="select-box">
+              <option value="male"></option>
               <option value="yes">Yes</option>
               <option value="no">No</option>
             </select>
@@ -80,9 +77,10 @@
             <br /><br />
   
             <label for="worktype" style="padding-right: 100px"
-              >Work-Type :
+              >Select Work-Type :
             </label>
-            <select name="worktype" id="worktype">
+            <select name="worktype" id="worktype" required class="select-box">
+              <option value="male"></option>
               <option value="private">Private</option>
               <option value="self-employed">Self-Employed</option>
               <option value="government">Government</option>
@@ -95,7 +93,8 @@
             <label for="residency" style="padding-right: 100px"
               >Residency Type :
             </label>
-            <select name="residency" id="residency">
+            <select name="residency" id="residency" required class="select-box">
+              <option value="male"></option>
               <option value="urban">Urban Area</option>
               <option value="rual">Rural Area</option>
             </select>
@@ -110,8 +109,9 @@
                 name="glucose"
                 min="80"
                 max="400"
-                style="width: 150px"
+                style="width: 200px"
                 placeholder=" e.g 80-300"
+                required 
               />
             </p>
   
@@ -123,15 +123,18 @@
                 name="bmi"
                 min="16"
                 step="0.1"
-                style="width: 150px"
+                style="width: 200px"
                 placeholder="e.g 18-45"
+                required 
+                id="bmi"
               />
             </p>
   
             <label for="smoking" style="padding-right: 100px"
               >Smoking Status :
             </label>
-            <select name="smoking" id="smoking">
+            <select name="smoking" id="smoking" required class="select-box">
+              <option value="male"></option>
               <option value="unknown">Unknown</option>
               <option value="never smoked">never smoked</option>
               <option value="smokes">smokes</option>
