--- a/templates/index.html
+++ b/templates/index.html
@@ -1,161 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/static/styles.css">
-    <title>Stroke Prediction System</title>
-
-  </head>
-
-  <body>
-    <nav class="navbar">
-      <a href="#" class="logo" id="bb"><h2><font size="6" face="arial" color="black">Stroke Prediction System</font></h2></a>
-      <div class="nav-links">
-        <ul class="nav-menu">
-          <li class="active"><a href="">Home</a></li>
-          <li><a target ="_blank" href="https://www.1mg.com/online-doctor-consultation/chat">Find a Doctor</a></li>
-          <li><a target ="_blank" href="https://www.google.com/search?q=find+hospitals+near+me">Find a Hospital</a></li>
-          <li><a target ="_blank" href="mailto:noxfreak4@gmail.com">Contact</a></li>
-          <!-- <li><a href = "https://www.google.com/search?keywords=My+Search+Parameters">asdasda</a></li> -->
-        </ul>
-      </div>
-        <i class='bx bx-grid-alt menu-hamburger'></i>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstraocdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-RQavfKMzOxrkONk8jzY0P48OjrZrdG9bxjqKjJd7G1yq3iv0dKxMpvLb+i7VEmR+0uZ/XV2Sqma8uPNhQe/VbQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    
+    <link rel="stylesheet" href="/static/home.css">
+</head>
+<body>
+    <!-- Navigation section -->
+    <nav class="navbar navbar-expand-md  sticky-top">
+        <div class="container-fluid">
+            <!-- <a class="navbar-brand" href="#"><img src="logo2.png" width="400" height="100"></a> -->
+            <section id="header1" class="bb">
+             <h2><font size="6" face="arial" color="black">Stroke Prediction System</font></h2> </section>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item" active id="navcolor">
+                        
+                        <a href="index.html" class="nav-link" >Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="doctor.html" class="nav-link" >Find a Doctor</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="hospital.html" class="nav-link" >Find a Hospital</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="hospital.html" class="nav-link" >Contact Us</a>
+                    </li>
+                    
+                    
+                    
+                </ul>
+            </div>
+        </div>
     </nav>
-    <header class="header">
-      <center>
-        <!-- <h1 id = "hero">STROKE PREDICTION</h1> -->
-        <div class="box">
-      
-          <form action="output" method="POST" id="form">
-            <label for="gender" style="padding-right: 100px">Select Your Gender :</label>
-            <select name="gender" id="gender" required class="select-box">
-              <option value="male"></option>
-              <option value="male">Male</option>
-              <option value="female">Female</option>
-              <option value="others">others</option>
-            </select>
-  
-            <p>
-              Enter Your Age :
-              <input type="number" name="age" min="1" max="100"  style="width: 200px" placeholder="Enter Age" required id="age">
+    <!-- Image slider -->
 
-            </p>
-  
-            <label for="hypertension" style="padding-right: 100px"
-              >Hypertension :
-            </label>
-            <select name="hypertension" id="hypertension" required class="select-box">
-              <option value="male"></option>
-              <option value="yes">Yes</option>
-              <option value="no">No</option>
-            </select>
-  
-            <br /><br />
-  
-            <label for="heart-disease" style="padding-right: 100px"
-              >Any Heart Diseases :
-            </label>
-            <select name="heart-disease" id="heart-disease" required class="select-box">
-              <option value="male"></option>
-              <option value="yes">Yes</option>
-              <option value="no">No</option>
-            </select>
-  
-            <br /><br />
-  
-            <label for="marriage" style="padding-right: 100px"
-              >Are You Married :
-            </label>
-            <select name="marriage" id="marriage" required class="select-box">
-              <option value="male"></option>
-              <option value="yes">Yes</option>
-              <option value="no">No</option>
-            </select>
-  
-            <br /><br />
-  
-            <label for="worktype" style="padding-right: 100px"
-              >Select Work-Type :
-            </label>
-            <select name="worktype" id="worktype" required class="select-box">
-              <option value="male"></option>
-              <option value="private">Private</option>
-              <option value="self-employed">Self-Employed</option>
-              <option value="government">Government</option>
-              <option value="student">Student</option>
-              <option value="others">Others</option>
-            </select>
-  
-            <br /><br />
-  
-            <label for="residency" style="padding-right: 100px"
-              >Residency Type :
-            </label>
-            <select name="residency" id="residency" required class="select-box">
-              <option value="male"></option>
-              <option value="urban">Urban Area</option>
-              <option value="rual">Rural Area</option>
-            </select>
-  
-            <br />
-  
-            <p>
-              Enter Glucose Levels :
-              <input
-                type="number"
-                id="glucose"
-                name="glucose"
-                min="80"
-                max="400"
-                style="width: 200px"
-                placeholder=" e.g 80-300"
-                required 
-              />
-            </p>
-  
-            <p>
-              Enter Your BMI :
-              <input
-                type="number"
-                id="bmi"
-                name="bmi"
-                min="16"
-                step="0.1"
-                style="width: 200px"
-                placeholder="e.g 18-45"
-                required 
-                id="bmi"
-              />
-            </p>
-  
-            <label for="smoking" style="padding-right: 100px"
-              >Smoking Status :
-            </label>
-            <select name="smoking" id="smoking" required class="select-box">
-              <option value="male"></option>
-              <option value="unknown">Unknown</option>
-              <option value="never smoked">never smoked</option>
-              <option value="smokes">smokes</option>
-              <option value="formerly smoked">formerly smoked</option>
-              <option value="others">Others</option>
-            </select>
-  
-            <br /><br />
-  
-            <input type="submit" value="SUBMIT" id="output" />
-  
-            <!-- {% for message in get_flashed_messages()%} -->
-            <p style="font-size: 18px">{{message}}</p>
-            <!-- {% endfor %} -->
-          </form>
-        </center>
+    <div id="slides" class="carousel slide" data-ride="carousel">
+<ul class="carousel-indicators">
+    <li data-target="#slides" data-slide-to="0" class="active"></li>
+    <li data-target="#slides" data-slide-to="1"></li>
+    <li data-target="#slides" data-slide-to="2"></li>
+</ul>
+
+
+    
+
+    </div>
+<!--Carousel Wrapper-->
+<div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
+    <!--Indicators-->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+      <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+    </ol>
+    <!--/.Indicators-->
+    <!--Slides-->
+    <div class="carousel-inner" role="listbox">
+      <!--First slide-->
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="https://www.numenta.com/wp-content/uploads/2022/04/Brain-inspiredAI-scaled.jpeg"
+          alt="First slide" id="blur">
+         
+         
+         <!-- https://www.numenta.com/wp-content/uploads/2022/04/Brain-inspiredAI-scaled.jpeg 
+        https://newsnetwork.mayoclinic.org/n7-mcnn/7bcc9724adf7b803/uploads/2019/11/shutterstock_561931702-1024x632.jpg-->
+          <div class="carousel-caption">
+            <h1 class="display-2">Stroke Predicition System</h1>
+            <h3>Maintain brain health</h3>
+            <a href="https://colab.research.google.com/drive/12DtqukWLoXG5urZgcftmN9t_kITrIcSO#scrollTo=EG8X0PrIrxmj"><button type="button" class="btn btn-outline-light btn-lg">View Demo</button></a>
+            <a href="stroke.html"><button type="button" class="btn btn-primary btn-lg">Get Started</button></a>
+            
+        </div>
       </div>
+      <!--/First slide-->
+      <!--Second slide-->
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/static/slide2.png"
+          alt="Second slide">
+      </div>
+      <!--/Second slide-->
+      <!--Third slide-->
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/static/slide3.png"
+          alt="Third slide">
+      </div>
+      <!--/Third slide-->
+    </div>
+    <!--/.Slides-->
+    <!--Controls-->
+    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    <!--/.Controls-->
+  </div>
+  <!--/.Carousel Wrapper-->
 
-    </header>
+    <!-- Jumbotron -->
+    <div class="container-fluid">
+        <div class="row jumbotron">
+         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+            <p class="lead">I believe that the greatest gift you can give your family and the world is a healthy YOU !</p>
+            <p text-align="center">-Joyce Meyer</p>
+        
+         </div>  
+         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+            <a href="https://brain.health/blog/"><button type="button" class="btn btn-outline-secondary btn-lg">Explore</button></a>
+         </div> 
+        </div>
+    </div>
+    <!-- Welcome Section -->
+    <div class="container-fluid padding" id="thinkbrain">
+        <div class="row welcome text-center">
+            <div class="col-12">
+                <h1 class="display-4">Think Brain Health!</h1>
+                
+            </div>
+            <hr>
+            <div class="col-12">
+                <p class="lead">One needs to be aware of causes and risks associated with brain stroke.</p>
+            </div>
+        </div>
+    </div>
+    <!-- Three column section -->
+    <div class="container-fluid padding" >
+        <div class="row text-center padding">
+          <div class="col-xs-12 col-sm-6 col-md-4 ">
+            <img src="/static/brainres.png" alt="" width="200" height="200">
+            <h3>Prediction System</h3>
+            <p>Predict your risk of brain stroke by filling the fields.</p>
+          </div> 
+          <div class="col-xs-12 col-sm-6 col-md-4 ">
+            <img src="/static/brainwav.png" alt="" width="200" height="200">
+            <h3>Healthy Brain</h3>
+            <p>Proper exercise minimizes your risk of getting a brain stroke.</p>
+          </div>
+          <div class="col-xs-12  col-md-4 ">
+            <img src="/static/fast.png" alt="" width="200" height="200">
+            <h3>Being Aware</h3>
+            <p>Having the knowledge of FAST to take proper action when in need.</p>
+          </div>
+        </div>
+        <hr class="my-4">
+    </div>
+    <!-- Two column section -->
+    <div class="container-fluid padding" id="fast">
+        <div class="row padding">
+            <div class=" col-lg-6">
+                <br>
+                <h2>Stroke Symptoms - FAST</h2>
+                <br>
+                <p>- In order to help someone having the Symptoms of stroke, one needs to be aware of FAST.</p>
+                <p>- FAST is an acronym to help detect and enhance responsiveness to the needs of a person having a stroke. </p>
+                <p>- The acronym stands for Facial drooping, Arm weakness, Speech difficulties and Time to call emergency services.</p>
+                
+                <br>
+                <a href="https://www.beaumont.org/health-wellness/blogs/stroke-symptoms-from-fast-to-faster#:~:text=The%20acronym%20FAST%20(Facial%20drooping,detecting%20symptoms%20of%20a%20stroke." class="btn btn-primary">Know more</a>
+            </div>
+            <div class="col-lg-6">
+                <br>
+                <img src="/static/befast1.jpg" alt="" width="600" height="300">
+            </div>
+        </div>
+    </div>
+    <hr class="my-4">
+    
+    <hr class="my-4">
     
    
-  </body>
-  
+    
+</body>
 </html>
